flapivor/tests/m3/hopix/typechecker/good/33-constructor-with-multiple-data.hopix
type IPair = `(Int, Int)

val a_pair_of_int : IPair = `<>(0, 1)