flapivor/tests/m3/hopix/typechecker/bad/47-constructor-03.hopix
type T = A (Int)

val main : Int = A<>


